<resources>
    <string name="app_name">UrWood</string>
    <string name="title_home">Home</string>
    <string name="title_promo">Promo</string>
    <string name="title_add_item">Add Item</string>
    <string name="title_blog">Blog</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text">Login</string>
    <string name="signup_text">Sign Up</string>

    <string name="edit_profile">Edit profile</string>
    <string name="setting">Setting</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_conf_password">Password Confirm</string>

    <string name="login_text_lupa_password">Lupa Password?</string>
    <string name="login_text_signup">Dont have an account?</string>
    <string name="signup_text_login">Already have an account?</string>

    <string name="location_dummy">Kota Bekasi, Jawa Barat</string>
    <string name="text_kategori">Kategori</string>
    <string name="text_promo">Promo</string>
    <string name="text_hint_search_blog">Cari Berita</string>
</resources>
