<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_promo"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_promo" />

    <item
        android:id="@+id/navigation_add"
        android:title="@string/title_add_item" />

    <item
        android:id="@+id/navigation_blog"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_blog" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_profile" />

</menu>