<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="signupViewModel"
            type="com.example.urwood.ui.auth.signup.SignupViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="36dp"
        tools:context=".ui.auth.AuthActivity">

        <ImageView
            android:id="@+id/iv_logo_login"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="#707070" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/iet_email_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:text="@={signupViewModel.email}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/pass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/iet_pass_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:text="@={signupViewModel.password}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_conf_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/pass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/iet_pass_conf_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_conf_password"
                android:inputType="textPassword"
                android:text="@={signupViewModel.confPassword}"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingEnd="80dp"
            android:paddingStart="80dp"
            android:text="@string/signup_text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:cornerRadius="25dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/signup_text_login" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_to_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/login_text"
                android:textAllCaps="true"
                android:textColor="@color/brown_200"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</layout>